--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -67,7 +67,7 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf;
+  background: #2e7bcf url('../images/square_bg.png') repeat !important;
   border-bottom: solid 1px #275da1;
 }
 
@@ -360,10 +360,9 @@ dl dd {
 }
 
 footer {
-  background: transparent url('../images/hr.png') 0 0 no-repeat;
+  background: url('../images/crossed_stripes.png') repeat !important;
   margin-top: 40px;
-  padding-top: 20px;
-  padding-bottom: 30px;
+  height:400px;
   font-size: 13px;
   color: #aaa;
 }
